--- a/crud-pessoa/crud-pessoa/crud-pessoa.csproj
+++ b/crud-pessoa/crud-pessoa/crud-pessoa.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.1.13" />
+  </ItemGroup>
+
 </Project>
